@@ -1,3 +1,5 @@
+[B]1.0.3[/B]
+- keresés bugFix
 [B]1.0.2[/B]
 - m3u8 linkek lejátszása inputstream adaptive használatával
 [B]1.0.1[/B]
